adding font awesome, style

--- a/laprueba.html
+++ b/laprueba.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Alegreya" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Montserrat" rel="stylesheet">
+   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+    
 </head>
 <body class="">
 <header>
@@ -47,7 +50,7 @@
 	<div class="content">
 		<div class="container">
             <div class="intro-header">
-                <hr class="pull-left">
+                <hr class="pull-left vertical">
                 <h1>
                     <span style="transform:matrix(1,0,0,1,0,0);">Grace Clavijo</span>
                 </h1>
@@ -62,38 +65,45 @@
 <section id="about_me" class="info-about-me">
 	<div class="content">
 		<div class="container-fluid">
-               <div class="info-init-body-content text-right">
-                    <div class="col-md-6 col-xs-6 col-sm-6 pull-right">
-                        <h2>ABOUT ME</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque tenetur quos alias optio nulla eos tempore sapiente laboriosam inventore quidem cum laudantium error, facilis explicabo ab, at odio, nesciunt, voluptate.</p> 
-                    </div>  
-               </div>
-            <div class="middle-structure">
-                <div class="middle-structure-info text-left">
+            <div class="row -info text-center">
+                <div class="col-md-6 col-xs-6 col-sm-6 pull-right">
+                    LAS IMAGENES 
+                </div>    
+            </div>
+            <div class="middle-structure -about">
+                <div class=" info middle-structure-info text-left">
                     <div class="col-md-12 col-xs-12 col-sm-12 pull-left">
-                        <h2>ABOUT ME</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque tenetur quos alias optio nulla eos tempore sapiente laboriosam inventore quidem cum laudantium error, facilis explicabo ab, at odio, nesciunt, voluptate.</p> 
+                    <h2>About Me</h2>
+                    <hr class="hor">    
+                    <p>Mi pasión por la tecnología el diseño y los videojuegos hizo que llegara a LABORATORIA para formarme como desarrolladora y programadora web. </p>
+                    <p>Tambien me apasiona la naturaleza, los viajes y el poder difundir la cultura que caracteriza a cada región, por ello estudie la carrera de Turismo y Hoteleria en la UNSA y estudie varios idiomas</p>
                     </div>  
                </div>
             </div>
-		</div>
+        </div>
 	</div>
 </section>
 <!----------------FIRST-SKILLS--------------------------------------------------->
 <section id="skills" class=" info-skills">
 	<div class="content">
 		<div class="container-fluid">
-               <div class="info-init-body-content text-right">
+               <div class="row text-right">
                     <div class="col-md-6 col-xs-6 col-sm-6 pull-right">
-                        <h2>ABOUT ME</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque tenetur quos alias optio nulla eos tempore sapiente laboriosam inventore quidem cum laudantium error, facilis explicabo ab, at odio, nesciunt, voluptate.</p> 
+                        <h3>Languajes</h3>
+                        <ul class="list-unstyled">
+                            <li>Spanish</li>
+                            <li>English</li>
+                            <li>Mandarin</li>
+                            <li>Japanese</li>
+                        </ul> 
                     </div>  
                </div>
-            <div class="middle-structure">
-                <div class="middle-structure-info text-left">
+            <div class="middle-structure -skills">
+                <div class="row middle-structure-info text-left">
                     <div class="col-md-12 col-xs-12 col-sm-12 pull-left">
-                        <h2>ABOUT ME</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque tenetur quos alias optio nulla eos tempore sapiente laboriosam inventore quidem cum laudantium error, facilis explicabo ab, at odio, nesciunt, voluptate.</p> 
+                       <h2>Skills</h2>
+                        <h3>Programs</h3>
+                               
                     </div>  
                </div>
             </div>
@@ -104,13 +114,12 @@
 <section id="projects" class="info-projects">
 	<div class="content">
 		<div class="container-fluid">
-               <div class="info-init-body-content text-right">
-                    <div class="col-md-6 col-xs-6 col-sm-6 pull-right">
-                        <h2>ABOUT ME</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque tenetur quos alias optio nulla eos tempore sapiente laboriosam inventore quidem cum laudantium error, facilis explicabo ab, at odio, nesciunt, voluptate.</p> 
-                    </div>  
-               </div>
-            <div class="middle-structure">RED</div>
+            <div class="row">
+                <div class="col-md-6 col-sm-6 col-xs-6 col-offset-md-6 text-right">
+                    holaaa        
+                </div>
+                <div class="middle-structure -projects">RED</div>
+            </div>
 		</div>
 	</div>
 </section>
