--- a/laprueba.html
+++ b/laprueba.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <title>laprueba</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Alegreya" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Montserrat" rel="stylesheet">
-   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-    
+   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">   
 </head>
 <body class="">
 <header>
@@ -22,7 +20,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <span><a id="btn_initial">image<img src="" alt=""></a></span>
+                <span><a id="btn_initial">IMAGEN<img src="" alt=""></a></span>
             </div>
             <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1" aria-expanded="false">
                 <ul class="nav navbar-nav navbar-right">
@@ -111,14 +109,57 @@
 	</div>
 </section>
 <!----------------FIRST-PROJECTS--------------------------------------------------->
-<section id="projects" class="info-projects">
+<section id="projects" class="info-projects text-center">
 	<div class="content">
 		<div class="container-fluid">
-            <div class="row">
-                <div class="col-md-6 col-sm-6 col-xs-6 col-offset-md-6 text-right">
-                    holaaa        
-                </div>
-                <div class="middle-structure -projects">RED</div>
+            <div class="middle-structure -projects">
+                <!--aqui aparecen los elementos cuando hago hover--->
+            </div>
+            <!--la estructura de los numeros -->
+            <div class="middle-structure-right ">
+               <div class="menu-navigation-number middle-structure-info">
+                   <ul class="list-unstyled">
+                       <li><span>01</span></li>
+                       <li><span>02</span></li>
+                       <li>03</li>
+                       <li>04</li>
+                   </ul>
+                   
+               </div>
+                <div class="middle-structure-info">
+                    <ul class="projects list-inline list-unstyled">
+                        <li >
+                            <i class="fa fa-arrow-right"></i>
+                        </li>
+                        <li >
+                            <span>Project 1</span>
+                        </li>    
+                    </ul>
+                    <ul class="projects list-inline list-unstyled">
+                        <li >
+                            <i class="fa fa-arrow-right"></i>
+                        </li>
+                        <li >
+                            <span>Project 2</span>
+                        </li>    
+                    </ul>
+                    <ul class="projects list-inline list-unstyled">
+                        <li >
+                            <i class="fa fa-arrow-right"></i>
+                        </li>
+                        <li >
+                            <span>Project 3</span>
+                        </li>    
+                    </ul>
+                    <ul class="projects list-inline list-unstyled">
+                        <li>
+                            <i class="fa fa-arrow-right"></i>
+                        </li>
+                        <li >
+                            <span>Project 4</span>
+                        </li>    
+                    </ul>
+                </div>   
             </div>
 		</div>
 	</div>
