--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>laprueba</title>
+    <title>Grace-Portfolio</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/main.css">
-   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Montserrat" rel="stylesheet">
-   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">   
+   <link rel="stylesheet" href="css/main.css">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="css/animate.css">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 </head>
-<body class="">
+<body class="elbody">
+<!-------------------EL HEADER----------------------------------------->
 <header>
     <nav class="navbar-gr navbar-inverse" role="navigation" style="border-color: transparent; color: white; background:none;">
         <div class="container-fluid">
@@ -33,18 +36,8 @@
         </div>
     </nav>
 </header>
-<!----------------LOADER--------------------------------------------------->
-<div class="gc-loader -hidden">
-    <div class="gr-loader-img">
-        <img src="" alt="">
-    </div>
-</div>
-<!----------------LOADER------------------------------------------------->
-<div class="gc-scroller">
-    <button class="loader">loader</button>
-</div>
-<!----------------DIV CONTENT DE PAGE--------------------------------------------------->
-<section id="view-start" class="visible  welcome">
+<!----------------menu--------------------------------------------------->
+<section id="welcome view-start" class="visible  welcome">
 	<div class="content">
 		<div class="container">
             <div class="intro-header">
@@ -59,26 +52,75 @@
 		</div>
 	</div>
 </section>
-<!----------------FIRST-ABOUT-ME--------------------------------------------------->
+<!----------------FORM-PLAYERS------ ------------------------------------------->
 <section id="about_me" class="info-about-me">
 	<div class="content">
 		<div class="container-fluid">
             <div class="middle-structure -about">
-                <div class=" info middle-structure-info text-left">
+                <div class=" row info middle-structure-info text-left">
                     <div class="col-md-12 col-xs-12 col-sm-12 pull-left">
-                    <h2>About Me</h2>
-                    <hr class="hor">    
-                    <p>Mi pasión por la tecnología, el diseño y los videojuegos hizo que llegara a LABORATORIA para formarme como desarrolladora y programadora web. </p>
-                    <p>Tambien me apasiona la naturaleza, los viajes y el poder difundir la cultura que caracteriza a cada región, por ello estudie la carrera de Turismo y Hoteleria en la UNSA y estudie varios idiomas</p>
-                    </div>  
-               </div>
+                    <h2 class="animated fadeInLeft">About Me</h2>
+                    <hr class="hor animated fadeInRight">    
+                    <p class="animated fadeInLeft">Mi pasión por la tecnología, el diseño y los videojuegos hizo que llegara a LABORATORIA para formarme como desarrolladora y programadora web. </p>
+                    <p class="animated fadeInLeft">Tambien me apasiona la naturaleza, los viajes y el poder difundir la cultura que caracteriza a cada región, por ello estudie la carrera de Turismo y Hoteleria en la UNSA y estudie varios idiomas</p>
+                    <div class="text-center likes_about_me">
+                        <h3><i class="fa fa-heart animated flash"></i></h3>
+                        <ul class="list-inline list-unstyled">
+                            <li class="likes animated "><i class="fa fa-paint-brush"></i></li>     
+                            <li class="likes animated "><i class="fa fa-gamepad"></i></li>     
+                            <li class="likes animated "><i class="fa fa-paw"></i></li>     
+                        </ul>
+                        <ul class="list-inline list-unstyled">
+                            <li class="likes animated "><i class="fa fa-music"></i></li>
+                            <li class="likes animated "><i class="fa fa-tree"></i></li>
+                        </ul>     
+                    </div>
+                    </div>
+                  </div>
             </div>
-            <div class="row -info text-center">
-                <div class="col-md-6 col-xs-6 col-sm-6 pull-right">
-                    LAS IMAGENES 
-                </div>    
+                <div class="row -info text-center">
+                <div class="col-md-6 col-xs-6 col-sm-6 pull-right timeline">
+                          <!---------Carousel----------------------->
+                       <div id="carousel-1" class="carousel slide" data-ride="carousel">
+                          <!---------Indicators----------------------->
+                          <ol class="carousel-indicators">
+                            <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-1" data-slide-to="1"></li>
+                            <li data-target="#carousel-1" data-slide-to="2"></li>
+                          </ol>
+
+                          <!--------------Wrapper for slides------->
+                          <div class="carousel-inner" role="listbox">
+                            <div class="item active">
+                              <img src="images/escogidas/_MG_4420.JPG" class="img-responsive" alt="">
+                              <div class="carousel-caption hidden-xs hidden-sm caption-g">
+                              </div>
+                            </div>
+                            <div class="item">
+                              <img src="images/escogidas/_MG_4422.JPG" class="img-responsive" alt="">
+                              <div class="carousel-caption hidden-xs hidden-sm caption-g">
+                              </div>
+                            </div>
+                            <div class="item">
+                              <img src="images/escogidas/_MG_4423.JPG" class="img-responsive" alt="">
+                              <div class="carousel-caption hidden-xs hidden-sm caption-g">
+                              </div>
+                            </div>
+                          </div>
+
+                          <!------------------------Controls-------------------->
+                            <a href="#carousel-1" class="left carousel-control"  role="button" data-slide="prev">
+                                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a href="#carousel-1" class="right carousel-control"  role="button" data-slide="next">
+                                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>    
+                    </div>
+                </div>   
             </div>
-        </div>
 	</div>
 </section>
 <!----------------FIRST-SKILLS--------------------------------------------------->
@@ -154,25 +196,6 @@
                 <button id="btn_project_user" class="btn_press">View Case</button>  
                </div>
             </div>
-            <!--la estructura de los numeros -->
-            <div class="middle-structure-right ">
-               <div class="menu-navigation-number middle-structure-info">
-                   <ul class="list-unstyled">
-                       <li><span>01</span></li>
-                       <li><span>02</span></li>
-                       <li>03</li>
-                       <li>04</li>
-                   </ul>
-               </div>
-                <div class="middle-structure-info" id="projects">
-                    <ul class="projects list-unstyled">
-                        <li><i class="fa fa-arrow-right"></i><span>Project 1</span></li>    
-                        <li><i class="fa fa-arrow-right"></i><span>Project 2</span></li>    
-                        <li><i class="fa fa-arrow-right"></i><span>Project 3</span></li>    
-                        <li><i class="fa fa-arrow-right"></i><span>Project 4</span></li>    
-                    </ul>
-                </div>   
-            </div>
 		</div>
 	</div>
 </section>
@@ -180,31 +203,27 @@
 <section id="contact_me" class=" info-contact-me">
 	<div class="content">
 		<div class="container-fluid">
-            <div class="middle-structure -contacts">
-                <div class="middle-structure-info text-left ">
+            <div class="middle-structure -about">
+                <div class=" row info middle-structure-info text-left">
                     <div class="col-md-12 col-xs-12 col-sm-12 pull-left">
-                        <h2>ABOUT ME</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque tenetur quos alias optio nulla eos tempore sapiente laboriosam inventore quidem cum laudantium error, facilis explicabo ab, at odio, nesciunt, voluptate.</p> 
-                    </div>  
-               </div>
-            </div>
-            <div class="info-init-body-content text-right">
-                <div class="col-md-6 col-xs-6 col-sm-6 pull-right">
-                    <h2>ABOUT ME</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque tenetur quos alias optio nulla eos tempore sapiente laboriosam inventore quidem cum laudantium error, facilis explicabo ab, at odio, nesciunt, voluptate.</p> 
-                    </div>  
+                    <h2 class="animated fadeInLeft">Contact Me</h2>
+                    <hr class="hor animated fadeInRight">    
+                    <p class="animated fadeInLeft">Mi pasión por la tecnología, el diseño y los videojuegos hizo que llegara a LABORATORIA para formarme como desarrolladora y programadora web. </p>
+                    <p class="animated fadeInLeft">Tambien me apasiona la naturaleza, los viajes y el poder difundir la cultura que caracteriza a cada región, por ello estudie la carrera de Turismo y Hoteleria en la UNSA y estudie varios idiomas</p>
+                    </div>
+                  </div>
             </div>
 		</div>
 	</div>
 </section>
-<!------------------------------------SCRIPTS-------------------------------->
-<script src="js/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery-3.1.1.min.js"></script>
+<!----------------------SCRIPT-------------------------------->
+<script
+  src="https://code.jquery.com/jquery-1.12.4.min.js"
+  integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+  crossorigin="anonymous"></script> 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
-<script src="js/main.js"></script>
-<script src="js/app.js"></script>     
-<script src="js/projects.js"></script>
-<script src="js/json.js"></script>     
+<script src="js/jquery.js"></script> 
+<script src="js/bootstrap.min.js"></script>
+<script src="js/main.js"></script>   
 </body>
 </html>
