adding styles animations, structure

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <!----------------menu--------------------------------------------------->
 <section id="welcome view-start" class="visible  welcome">
 	<div class="content">
-		<div class="container">
+		<div class="container-fluid">
             <div class="intro-header">
                 <hr class="pull-left vertical">
                 <h1>
@@ -196,6 +196,25 @@
                 <button id="btn_project_user" class="btn_press">View Case</button>  
                </div>
             </div>
+            <!--la estructura de los numeros -->
+            <div class="middle-structure-right ">
+               <div class="menu-navigation-number middle-structure-info">
+                   <ul class="list-unstyled">
+                       <li><span>01</span></li>
+                       <li><span>02</span></li>
+                       <li>03</li>
+                       <li>04</li>
+                   </ul>
+               </div>
+                <div class="middle-structure-info" id="projects">
+                    <ul class="projects list-unstyled">
+                        <li><i class="fa fa-arrow-right"></i><span>Project 1</span></li>    
+                        <li><i class="fa fa-arrow-right"></i><span>Project 2</span></li>    
+                        <li><i class="fa fa-arrow-right"></i><span>Project 3</span></li>    
+                        <li><i class="fa fa-arrow-right"></i><span>Project 4</span></li>    
+                    </ul>
+                </div>   
+            </div>
 		</div>
 	</div>
 </section>
@@ -227,3 +246,4 @@
 <script src="js/main.js"></script>   
 </body>
 </html>
+
