adding path photo

--- a/index.html
+++ b/index.html
@@ -92,17 +92,17 @@
                           <!--------------Wrapper for slides------->
                           <div class="carousel-inner" role="listbox">
                             <div class="item active">
-                              <img src="images/escogidas/_MG_4420.JPG" class="img-responsive" alt="">
+                              <img src="images/escogidas/photo1.JPG" class="img-responsive" alt="">
                               <div class="carousel-caption hidden-xs hidden-sm caption-g">
                               </div>
                             </div>
                             <div class="item">
-                              <img src="images/escogidas/_MG_4422.JPG" class="img-responsive" alt="">
+                              <img src="images/escogidas/photo2.JPG" class="img-responsive" alt="">
                               <div class="carousel-caption hidden-xs hidden-sm caption-g">
                               </div>
                             </div>
                             <div class="item">
-                              <img src="images/escogidas/_MG_4423.JPG" class="img-responsive" alt="">
+                              <img src="images/escogidas/photo3.JPG" class="img-responsive" alt="">
                               <div class="carousel-caption hidden-xs hidden-sm caption-g">
                               </div>
                             </div>
