adding contacts, color, phrase

--- a/laprueba.html
+++ b/laprueba.html
@@ -64,7 +64,7 @@
                     <p class="animated fadeInLeft">Mi pasión por la tecnología, el diseño y los videojuegos hizo que llegara a LABORATORIA para formarme como desarrolladora y programadora web. </p>
                     <p class="animated fadeInLeft">Tambien me apasiona la naturaleza, los viajes y el poder difundir la cultura que caracteriza a cada región, por ello estudie la carrera de Turismo y Hoteleria en la UNSA y estudie varios idiomas</p>
                     <div class="text-center likes_about_me">
-                        <h3><i class="fa fa-heart animated flash"></i></h3>
+                        <h3><i class="fa fa-heart animated flash">Likes</i></h3>
                         <ul class="list-inline list-unstyled">
                             <li class="likes animated "><i class="fa fa-paint-brush"></i></li>     
                             <li class="likes animated "><i class="fa fa-gamepad"></i></li>     
@@ -78,8 +78,8 @@
                     </div>
                   </div>
             </div>
-                <div class="row -info text-center">
-                <div class="col-md-6 col-xs-6 col-sm-6 pull-right timeline">
+            <div class="row -info text-center">
+                <div class="col-md-6 col-xs-6 col-sm-6 pull-right">
                           <!---------Carousel----------------------->
                        <div id="carousel-1" class="carousel slide" data-ride="carousel">
                           <!---------Indicators----------------------->
@@ -92,17 +92,17 @@
                           <!--------------Wrapper for slides------->
                           <div class="carousel-inner" role="listbox">
                             <div class="item active">
-                              <img src="images/escogidas/_MG_4420.JPG" class="img-responsive" alt="">
+                              <img src="images/escogidas/photo1.JPG" class="img-responsive" alt="">
                               <div class="carousel-caption hidden-xs hidden-sm caption-g">
                               </div>
                             </div>
                             <div class="item">
-                              <img src="images/escogidas/_MG_4422.JPG" class="img-responsive" alt="">
+                              <img src="images/escogidas/photo2.JPG" class="img-responsive" alt="">
                               <div class="carousel-caption hidden-xs hidden-sm caption-g">
                               </div>
                             </div>
                             <div class="item">
-                              <img src="images/escogidas/_MG_4423.JPG" class="img-responsive" alt="">
+                              <img src="images/escogidas/photo3.JPG" class="img-responsive" alt="">
                               <div class="carousel-caption hidden-xs hidden-sm caption-g">
                               </div>
                             </div>
@@ -117,17 +117,17 @@
                                 <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
-                        </div>    
-                    </div>
-                </div>   
-            </div>
+                    </div>    
+                </div>
+            </div>   
+        </div>
 	</div>
 </section>
 <!----------------FIRST-SKILLS--------------------------------------------------->
 <section id="skills" class=" info-skills">
 	<div class="content">
 		<div class="container-fluid">
-           <!-----------------------TOURISM----------------------------->
+           <!-----------------------Languages----------------------------->
             <div class="row text-right">
                     <div class="col-md-6 col-xs-6 col-sm-6 pull-right">
                         <h3 id="name">Languages</h3>
@@ -142,7 +142,7 @@
                         </ul> 
                     </div>  
             </div>
-            <!-----------------------TOURISM----------------------------->
+            <!-----------------------Web Developer----------------------------->
             <div class="middle-structure -skills">
                 <div class="row middle-structure-info text-left">
                     <div class="col-md-12 col-xs-12 col-sm-12 pull-left">
@@ -221,16 +221,23 @@
 <!----------------FIRST-CONTACT-ME--------------------------------------------------->
 <section id="contact_me" class=" info-contact-me">
 	<div class="content">
-		<div class="container-fluid">
-            <div class="middle-structure -about">
+		<div class="container-fluid -contact">
+            <div class="middle-structure">
                 <div class=" row info middle-structure-info text-left">
                     <div class="col-md-12 col-xs-12 col-sm-12 pull-left">
-                    <h2 class="animated fadeInLeft">Contact Me</h2>
-                    <hr class="hor animated fadeInRight">    
-                    <p class="animated fadeInLeft">Mi pasión por la tecnología, el diseño y los videojuegos hizo que llegara a LABORATORIA para formarme como desarrolladora y programadora web. </p>
-                    <p class="animated fadeInLeft">Tambien me apasiona la naturaleza, los viajes y el poder difundir la cultura que caracteriza a cada región, por ello estudie la carrera de Turismo y Hoteleria en la UNSA y estudie varios idiomas</p>
+                        <h2 class="animated fadeInLeft">Contact Me</h2>
+                        <hr class="hor animated fadeInRight">   
                     </div>
-                  </div>
+                </div> 
+            </div>
+            <div class="row text-center">
+                    <div class="col-md-6 col-xs-6 col-sm-6 pull-right">
+                        <p>“Vivo cada dia de mi vida <p> 
+                        <p>como si fuera el último, </p>
+                        <p> y aprendo <p>
+                        <p>como si fuese a vivir</p> 
+                        <p>para siempre”.<p>
+                    </div>  
             </div>
 		</div>
 	</div>
