adding form and icons

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="elbody">
 <!-------------------EL HEADER----------------------------------------->
 <header>
-    <nav class="navbar-gr navbar-inverse" role="navigation" style="border-color: transparent; color: white; background:none;">
+    <nav class="navbar-gr navbar-inverse" role="navigation" style="border-color: transparent; background:none;">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
