--- a/laprueba.html
+++ b/laprueba.html
@@ -226,11 +226,42 @@
                 <div class=" row info middle-structure-info text-left">
                     <div class="col-md-12 col-xs-12 col-sm-12 pull-left">
                         <h2 class="animated fadeInLeft">Contact Me</h2>
-                        <hr class="hor animated fadeInRight">   
+                        <hr class="hor animated fadeInRight">
+                        <!------------------ICONS------------------->
+                        <div class="text-center contact-icon">
+                            <p>gracefctorres@gmail.com</p>
+                            <ul class="list-unstyled list-inline ">
+                                <li><a href=""><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href=""><i class="fa fa-github"></i></a></li>
+                                <li><a href=""><i class="fa fa-twitch"></i></a></li>
+                            </ul>
+                        </div>  
+                        <!-------------FORM----------------->
+                        <p class="animated fadeInLeft">Enviame un mensaje!</p>
+                        <form class="form-horizontal animated fadeInLeft">
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">Nombre</label>
+                                <div class="col-sm-10">
+                                    <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label  class="col-sm-2 control-label">Email</label>
+                                <div class="col-sm-10">
+                                    <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label  class="col-sm-2 control-label">Mensaje</label>
+                                <div class="col-sm-10">
+                                    <textarea class="form-control" rows="3" placeholder="Mensaje"></textarea>
+                                </div>
+                            </div>
+                        </form> 
                     </div>
                 </div> 
             </div>
-            <div class="row text-center">
+            <div class="row text-center contact_phrase">
                     <div class="col-md-6 col-xs-6 col-sm-6 pull-right">
                         <p>“Vivo cada dia de mi vida <p> 
                         <p>como si fuera el último, </p>
